examples/test/testpolicy2241.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2241
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key14: value49
      key12: value23
      key3: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value32
      podSelector:
        matchLabels:
          key4: value24
          key9: value20
